--- a/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/src/main/resources/templates/admin/fragments/sidebar.html
@@ -172,7 +172,8 @@
 				     data-bs-parent="#sidenavAccordion">
 					<nav class="sb-sidenav-menu-nested nav">
 						<a class="nav-link" th:href="@{/pages/part-new}">메인 배너 관리</a>
-						<a class="nav-link" th:href="@{/pages/part-view}">팝업 관리</a>
+						<a class="nav-link" th:href="@{/admin/popup/list}">팝업 관리</a>
+						<a class="nav-link" th:href="@{/admin/popup/create}">팝업 생성</a>
 					</nav>
 				</div>
 
