--- a/src/main/resources/static/user/assets/css/custom-style.css
+++ b/src/main/resources/static/user/assets/css/custom-style.css
@@ -97,6 +97,38 @@ body{
     border: 0
 }
 
+.btn-shiftBtn {
+    background-color: rgb(0, 25, 91);;
+    color: white;
+    font-size: 1rem;
+    font-weight: 400;
+    border-radius: 0.25rem;
+    cursor: pointer;
+    margin: 0 0.5rem 0.5rem 0;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    user-select: none;
+    border: 1px solid transparent;
+    transition: all 0.2s ease-in-out;
+}
+
+.btn-optionBtn {
+    background-color: rgb(0, 25, 91, 0.8);
+    color: white;
+    font-size: 1rem;
+    font-weight: 400;
+    border-radius: 0.25rem;
+    cursor: pointer;
+    margin: 0 0.5rem 0.5rem 0;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    user-select: none;
+    border: 1px solid transparent;
+    transition: all 0.2s ease-in-out;
+}
+
 
 /*START 피드 목록 카드뷰*/
 
