--- a/src/main/resources/templates/admin/content/pages/contents/list.html
+++ b/src/main/resources/templates/admin/content/pages/contents/list.html
@@ -3,25 +3,128 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="http://www.thymeleaf.org">
 
 <th:block layout:fragment="css">
-	<style type="text/css">
-        .datepicker {
-            z-index: 2000 !important;
-        }
-	</style>
-	<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
+	<link href="//cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css" rel="stylesheet"/>
 </th:block>
+
 <th:block layout:fragment="script">
-	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+	<script src="//cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+
+	<script>
+        // Korean
+        var lang_kor = {
+            "decimal": "",
+            "emptyTable": "데이터가 없습니다.",
+            "info": "_START_ - _END_ (총 _TOTAL_ 개)",
+            "infoEmpty": "0명",
+            "infoFiltered": "(전체 _MAX_ 개 중 검색결과)",
+            "infoPostFix": "",
+            "thousands": ",",
+            "lengthMenu": "_MENU_ 개씩 보기",
+            "loadingRecords": "로딩중...",
+            "processing": "처리중...",
+            "search": "검색 : ",
+            "zeroRecords": "검색된 데이터가 없습니다.",
+            "paginate": {
+                "first": "첫 페이지",
+                "last": "마지막 페이지",
+                "next": "다음",
+                "previous": "이전"
+            },
+            "aria": {
+                "sortAscending": " :  오름차순 정렬",
+                "sortDescending": " :  내림차순 정렬"
+            }
+        };
+
+        $(document).ready(function () {
+            $('#myTable').DataTable({
+                "language": lang_kor
+            });
+        });
+	</script>
 </th:block>
 
 <div layout:fragment="content">
-	<h1 th:if="${editMode == true}" class="mt-4">컨텐츠 수정</h1>
-	<h1 th:unless="${editMode == true}" class="mt-4">컨텐츠 생성</h1>
+
+
+	<script>
+        // modal image lazy load
+        $(function () {
+            $('.modal').on('shown.bs.modal', function (e) {
+                console.log(e.relatedTarget);
+
+                // get modal number from e
+                var modal = $(e.relatedTarget).attr('data-bs-target');
+
+                var images = $(modal).find('img[data-src]');
+                // images lazy load
+
+                for (var i = 0; i < images.length; i++) {
+                    var image = images[i];
+                    image.src = image.getAttribute('data-src');
+                    image.removeAttribute('data-src');
+                }
+            });
+        });
+	</script>
+
+	<h1 class="mt-4">피드 컨텐츠 리스트</h1>
 	<ol class="breadcrumb mb-4">
-		<li th:if="${editMode == true}" class="breadcrumb-item active">Edit Contents</li>
-		<li th:unless="${editMode == true}" class="breadcrumb-item active">Add New Contents</li>
+		<li class="breadcrumb-item active">Overview Contents</li>
 	</ol>
 	<div class="card-body">
+		<table id="myTable">
+			<thead>
+			<tr>
+				<th style="width:5%"> #</th>
+				<th>제목</th>
+				<th style="width:10%" data-sortable="">작성일</th>
+				<th style="width:3%"></th>
+				<th style="width:3%"></th>
+				<th style="width:3%"></th>
+			</tr>
+			</thead>
+			<tbody>
+			<tr th:each="content : ${contents}">
+				<td th:text="${content.id}"></td>
+				<td th:text="${content.title}"></td>
+				<td th:text="${content.createdAt}"></td>
+				<!--				<td th:text="${content.description}"></td>-->
+				<!--				<td th:text="${product.description}"></td>-->
+				<!--				<td th:text="${product.selectShop.name}"></td>-->
+				<!--				make date to pretty format-->
+				<!--				<td th:text="${#temporals.format(product.createdAt, 'yyyy년 MM월 dd일 HH시 mm분')}"></td>-->
+
+				<td>
+					<a th:href="@{/admin/contents/edit/{id}(id=${content.id})}"
+					   style="text-decoration: none; color:black">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+						     class="bi bi-pencil" viewBox="0 0 16 16">
+							<path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+						</svg>
+					</a>
+				</td>
+				<td>
+					<a id="detailBtn" th:href="@{/feed/{id}(id=${content.id})}" target="_blank"
+					   style="text-decoration: none; color:black">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+						     class="bi bi-search" viewBox="0 0 16 16">
+							<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+						</svg>
+					</a>
+				</td>
+				<td>
+					<a th:href="@{/admin/contents/remove(id=${content.id})}"
+					   th:attr="onclick=|return confirm('정말 삭제 하시겠습니까?')|" style="text-decoration: none; color:black">
+						<svg width="16" height="16" viewBox="-32 0 512 512" xmlns="http://www.w3.org/2000/svg">
+							<path d="M268 416h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12zM432 80h-82.41l-34-56.7A48 48 0 0 0 274.41 0H173.59a48 48 0 0 0-41.16 23.3L98.41 80H16A16 16 0 0 0 0 96v16a16 16 0 0 0 16 16h16v336a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128h16a16 16 0 0 0 16-16V96a16 16 0 0 0-16-16zM171.84 50.91A6 6 0 0 1 177 48h94a6 6 0 0 1 5.15 2.91L293.61 80H154.39zM368 464H80V128h288zm-212-48h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12z"/>
+						</svg>
+					</a>
+				</td>
+
+			</tr>
+			</tbody>
+		</table>
 
 	</div>
 </div>
