--- a/src/main/resources/templates/admin/content/pages/product/list.html
+++ b/src/main/resources/templates/admin/content/pages/product/list.html
@@ -14,9 +14,9 @@
         var lang_kor = {
             "decimal": "",
             "emptyTable": "데이터가 없습니다.",
-            "info": "_START_ - _END_ (총 _TOTAL_ 명)",
+            "info": "_START_ - _END_ (총 _TOTAL_ 개)",
             "infoEmpty": "0명",
-            "infoFiltered": "(전체 _MAX_ 명 중 검색결과)",
+            "infoFiltered": "(전체 _MAX_ 개 중 검색결과)",
             "infoPostFix": "",
             "thousands": ",",
             "lengthMenu": "_MENU_ 개씩 보기",
