--- a/src/main/resources/templates/user/fragments/popup.html
+++ b/src/main/resources/templates/user/fragments/popup.html
@@ -11,7 +11,7 @@
 	     th:with="zindex=${99999 - popupStat.index}"
 	     th:style="${'display: block; z-index:' + zindex  }" th:data-popup-id="${popup.id}">
 		<div class="modal-dialog modal-lg modal-dialog-centered" role="document">
-			<div class="modal-content" style="width: fit-content!important;">
+			<div class="modal-content" style="width: important;">
 				<div class="modal-body">
 					<div class="row">
 						<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"
