--- a/src/main/resources/templates/user/content/pages/my-page/cs.html
+++ b/src/main/resources/templates/user/content/pages/my-page/cs.html
@@ -2,75 +2,212 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/user/layout/mypage_layout}" lang="ko">
 
-    <div layout:fragment="content" class="content">
+<div layout:fragment="content" class="content">
 
-        <div class="card">
-            <div class="card-header">
-                고객센터
-            </div>
-            <div class="card-body">
+	<style>
+        .btn-card-header {
+            border-radius: 0.3rem;
+            font-weight: bold;
+            border: none;
+        }
+	</style>
+	<div class="card">
+		<div class="card-header">
+			고객센터
+			<a class="btn-gray btn-card-header float-end" href="/mypage/qna">문의하기</a>
+		</div>
+		<div class="card-body">
 
-                <!-- Tabs navs -->
-                <ul class="nav nav-tabs mb-3" id="ex1" role="tablist">
-                    <li class="nav-item" role="presentation">
-                        <a
-                                class="nav-link active"
-                                id="ex1-tab-1"
-                                data-mdb-toggle="tab"
-                                href="#ex1-tabs-1"
-                                role="tab"
-                                aria-controls="ex1-tabs-1"
-                                aria-selected="true"
-                        >회원관련</a
-                        >
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <a
-                                class="nav-link"
-                                id="ex1-tab-2"
-                                data-mdb-toggle="tab"
-                                href="#ex1-tabs-2"
-                                role="tab"
-                                aria-controls="ex1-tabs-2"
-                                aria-selected="false"
-                        >카테고리</a
-                        >
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <a
-                                class="nav-link"
-                                id="ex1-tab-3"
-                                data-mdb-toggle="tab"
-                                href="#ex1-tabs-3"
-                                role="tab"
-                                aria-controls="ex1-tabs-3"
-                                aria-selected="false"
-                        >카테고리</a
-                        >
-                    </li>
-                </ul>
-                <!-- Tabs navs -->
+			<!-- Tabs navs -->
+			<ul class="nav nav-tabs mb-3" id="ex1" role="tablist">
+				<li class="nav-item" role="presentation">
+					<a
+							class="nav-link active"
+							id="ex1-tab-1"
+							data-bs-toggle="tab"
+							href="#ex1-tabs-1"
+							role="tab"
+							aria-controls="ex1-tabs-1"
+							aria-selected="true"
+					>회원관련</a
+					>
+				</li>
+				<li class="nav-item" role="presentation">
+					<a
+							class="nav-link"
+							id="ex1-tab-2"
+							data-bs-toggle="tab"
+							href="#ex1-tabs-2"
+							role="tab"
+							aria-controls="ex1-tabs-2"
+							aria-selected="false"
+					>카테고리</a
+					>
+				</li>
+				<li class="nav-item" role="presentation">
+					<a
+							class="nav-link"
+							id="ex1-tab-3"
+							data-bs-toggle="tab"
+							href="#ex1-tabs-3"
+							role="tab"
+							aria-controls="ex1-tabs-3"
+							aria-selected="false"
+					>카테고리</a
+					>
+				</li>
+			</ul>
+			<!-- Tabs navs -->
 
-                <!-- Tabs content -->
-                <div class="tab-content" id="ex1-content">
-                    <div
-                            class="tab-pane fade show active"
-                            id="ex1-tabs-1"
-                            role="tabpanel"
-                            aria-labelledby="ex1-tab-1"
-                    >
-                        Tab 1 content
-                    </div>
-                    <div class="tab-pane fade" id="ex1-tabs-2" role="tabpanel" aria-labelledby="ex1-tab-2">
-                        Tab 2 content
-                    </div>
-                    <div class="tab-pane fade" id="ex1-tabs-3" role="tabpanel" aria-labelledby="ex1-tab-3">
-                        Tab 3 content
-                    </div>
-                </div>
-                <!-- Tabs content -->
+			<!-- Tabs content -->
+			<div class="tab-content" id="ex1-content">
+				<div
+						class="tab-pane fade show active"
+						id="ex1-tabs-1"
+						role="tabpanel"
+						aria-labelledby="ex1-tab-1"
+				>
+					<div id="accordion" class="accordion accordion_style1">
+						<div class="card">
+							<div class="card-header" id="headingOne">
+								<h6 class="mb-0"><a class="collapsed" data-bs-toggle="collapse" href="#collapseOne"
+								                    aria-expanded="true" aria-controls="collapseOne">Do you have any
+									built-in caching?</a></h6>
+							</div>
+							<div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
+							     data-bs-parent="#accordion">
+								<div class="card-body">
+									<p>It is a long established fact that a reader will be distracted by the readable
+										content of a page when looking at its layout. The point of using Lorem Ipsum is
+										that it has a more-or-less normal distribution of letters, as opposed to using
+										'Content here, content here', making it look like readable English. Many desktop
+										publishing packages and web page editors now use Lorem Ipsum as their default
+										model text, and a search for 'lorem ipsum' will uncover many web sites still in
+										their infancy.</p>
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-header" id="headingTwo">
+								<h6 class="mb-0"><a class="collapsed" data-bs-toggle="collapse" href="#collapseTwo"
+								                    aria-expanded="false" aria-controls="collapseTwo">How do I upload
+									files from my phone or tablet?</a></h6>
+							</div>
+							<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+							     data-bs-parent="#accordion">
+								<div class="card-body">
+									<p>There are many variations of passages of Lorem Ipsum available, but the majority
+										have suffered alteration in some form, by injected humour, or randomised words
+										which don't look even slightly believable. If you are going to use a passage of
+										Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the
+										middle of text.</p>
+									<p>All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks
+										as necessary, making this the first true generator on the Internet. It uses a
+										dictionary of over 200 Latin words, combined with a handful of model sentence
+										structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem
+										Ipsum is therefore always free from repetition, injected humour, or
+										non-characteristic words etc.</p>
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-header" id="headingThree">
+								<h6 class="mb-0"><a class="collapsed" data-bs-toggle="collapse" href="#collapseThree"
+								                    aria-expanded="false" aria-controls="collapseThree">How can I start
+									my design?</a></h6>
+							</div>
+							<div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+							     data-bs-parent="#accordion">
+								<div class="card-body">
+									<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots
+										in a piece of classical Latin literature from 45 BC, making it over 2000 years
+										old. Richard McClintock, a Latin professor at Hampden-Sydney College in
+										Virginia, looked up one of the more obscure Latin words, consectetur, from a
+										Lorem Ipsum passage, and going through the cites of the word in classical
+										literature, discovered the undoubtable source. Lorem Ipsum comes from sections
+										1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and
+										Evil) by Cicero, written in 45 BC. </p>
+									<p>This book is a treatise on the theory of ethics, very popular during the
+										Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..",
+										comes from a line in section 1.10.32.</p>
+									<ul class="list_style_3">
+										<li>The standard chunk of Lorem Ipsum below for those interested</li>
+										<li>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugi
+										</li>
+										<li>Et harum quidem rerum facilis est et expedita distinctio</li>
+										<li>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis
+											voluptatibus maiores
+										</li>
+										<li>when our power of choice is untrammelled and when nothing prevents</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-header" id="headingFour">
+								<h6 class="mb-0"><a class="collapsed" data-bs-toggle="collapse" href="#collapseFour"
+								                    aria-expanded="false" aria-controls="collapseFour">What are popular
+									free webpage builders?</a></h6>
+							</div>
+							<div id="collapseFour" class="collapse" aria-labelledby="headingFour"
+							     data-bs-parent="#accordion">
+								<div class="card-body">
+									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+										praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
+										excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui
+										officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
+									<p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum
+										soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
+										placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
+										Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus
+										saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
+									<ul class="list_style1">
+										<li>The standard chunk of Lorem Ipsum below for those interested</li>
+										<li>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugi
+										</li>
+										<li>Et harum quidem rerum facilis est et expedita distinctio</li>
+										<li>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis
+											voluptatibus maiores
+										</li>
+										<li>when our power of choice is untrammelled and when nothing prevents</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-header" id="headingFive">
+								<h6 class="mb-0"><a class="collapsed" data-bs-toggle="collapse" href="#collapseFive"
+								                    aria-expanded="false" aria-controls="collapseFive">How do you make
+									your own website for free?</a></h6>
+							</div>
+							<div id="collapseFive" class="collapse" aria-labelledby="headingFive"
+							     data-bs-parent="#accordion">
+								<div class="card-body">
+									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+										praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
+										excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui
+										officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
+									<p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum
+										soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
+										placeat facere possimus, omnis voluptas assumenda est, omnis dolor
+										repellendus.</p>
+									<p> Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus
+										saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="tab-pane fade" id="ex1-tabs-2" role="tabpanel" aria-labelledby="ex1-tab-2">
+					Tab 2 content
+				</div>
+				<div class="tab-pane fade" id="ex1-tabs-3" role="tabpanel" aria-labelledby="ex1-tab-3">
+					Tab 3 content
+				</div>
+			</div>
+			<!-- Tabs content -->
 
-            </div>
-        </div>
-    </div>
+		</div>
+	</div>
+</div>
 </html>
