--- a/src/main/resources/templates/user/content/pages/my-page/cs.html
+++ b/src/main/resources/templates/user/content/pages/my-page/cs.html
@@ -14,7 +14,9 @@
 	<div class="card">
 		<div class="card-header">
 			고객센터
-			<a class="btn-gray btn-card-header float-end" href="/mypage/qna">문의하기</a>
+			<a class="btn-gray btn-card-header float-end ion-margin-end" href="/mypage/qna-list">문의내역</a>
+			<a class="btn-gray btn-card-header float-end ion-margin-end" href="/mypage/qna" style="
+                margin-right: 0.5rem;">문의하기</a>
 		</div>
 		<div class="card-body">
 
