--- a/src/main/resources/templates/user/content/pages/my-page/qna.html
+++ b/src/main/resources/templates/user/content/pages/my-page/qna.html
@@ -19,30 +19,58 @@
 		<div class="card-body">
 			<!--			문의 유형-->
 			<!--			<label for="type">문의 유형</label>-->
-			<select class="form-select" id="type">
-				<option selected>문의 유형</option>
-				<option value="1">회원관련</option>
-				<option value="2">카테고리</option>
-				<option value="3">카테고리</option>
-			</select>
+			<form onsubmit="return makeQna()">
 
-			<!--			문의 제목-->
-			<div class="form-floating mt-3">
-				<input type="text" class="form-control" id="title" placeholder="문의 제목">
-				<label for="title">문의 제목</label>
-			</div>
+				<select class="form-select" id="questionType" name="questionType" required>
+					<option value="">문의 유형</option>
+					<option value="회원관련">회원관련</option>
+					<option value="카테고리1">카테고리</option>
+					<option value="카테고리2">카테고리</option>
+				</select>
 
-			<!--			문의 내용-->
-			<div class="form-floating mt-3">
-				<textarea class="form-control" placeholder="문의 내용" id="description"
-				          style="height: 20rem"></textarea>
-				<label for="description">문의 내용</label>
-			</div>
+				<!--			문의 제목-->
+				<div class="form-floating mt-3">
+					<input type="text" class="form-control" id="questionTitle" name="questionTitle" placeholder="문의 제목"
+					       required>
+					<label for="questionTitle">문의 제목</label>
+				</div>
 
-			<!--			button-->
-			<div class="mt-3">
-				<button type="button" class="form-control btn btn-shiftBtn">문의하기</button>
-			</div>
+				<!--			문의 내용-->
+				<div class="form-floating mt-3">
+				<textarea class="form-control" placeholder="문의 내용" id="questionDescription" name="questionDescription"
+				          style="height: 20rem" required></textarea>
+					<label for="qnaDescription">문의 내용</label>
+				</div>
+
+				<!--			button-->
+				<div class="mt-3">
+					<button class="form-control btn btn-shiftBtn" type="button" onclick="return makeQna();">문의하기
+					</button>
+				</div>
+			</form>
+
+			<script>
+                function makeQna() {
+                    // form data
+                    let data = new FormData($('form')[0]);
+
+                    $.ajax({
+                        url: "/mypage/qna/write.do",
+                        type: "POST",
+                        data: data,
+                        contentType: false,
+                        processData: false,
+                        success: function (response) {
+                            alert("문의글이 등록되었습니다.");
+                            location.href = "/mypage/qna-list";
+                        },
+                        error: function (error) {
+                            alert("문의글 등록에 실패했습니다.");
+                        }
+                    });
+                    return false;
+                }
+			</script>
 
 		</div>
 	</div>
