유저 질문 작성/ 확인 구현

--- a/src/main/resources/templates/user/content/pages/my-page/qna.html
+++ b/src/main/resources/templates/user/content/pages/my-page/qna.html
@@ -39,7 +39,7 @@
 				<div class="form-floating mt-3">
 				<textarea class="form-control" placeholder="문의 내용" id="questionDescription" name="questionDescription"
 				          style="height: 20rem" required></textarea>
-					<label for="qnaDescription">문의 내용</label>
+					<label for="questionDescription">문의 내용</label>
 				</div>
 
 				<!--			button-->
