--- a/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/src/main/resources/templates/admin/fragments/sidebar.html
@@ -201,7 +201,7 @@
 				</a>
 				<div class="collapse" id="newsPages" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
 					<nav class="sb-sidenav-menu-nested nav">
-						<a class="nav-link" th:href="@{/pages/news-new}">1대1 문의 확인 및 답장</a>
+						<a class="nav-link" th:href="@{/admin/cs/list}">1대1 문의 확인 및 답변</a>
 					</nav>
 				</div>
 
