--- a/src/main/resources/templates/user/content/pages/my-page/dips.html
+++ b/src/main/resources/templates/user/content/pages/my-page/dips.html
@@ -2,17 +2,40 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/user/layout/mypage_layout}" lang="ko">
 
-    <div layout:fragment="content" class="content">
+<div layout:fragment="content" class="content">
 
-        <div class="card">
-            <div class="card-header">
-                찜 목록
-            </div>
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-    </div>
+	<!--        bootstrap5 상품, 설렉트샵 탭 -->
+	<div class="card">
+		<div class="card-body">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<ul class="nav nav-tabs" id="myTab" role="tablist">
+							<li class="nav-item" role="presentation">
+								<button class="nav-link active" id="product-tab" data-bs-toggle="tab"
+								        data-bs-target="#product"
+								        type="button" role="tab" aria-controls="product" aria-selected="true">상품
+								</button>
+							</li>
+							<li class="nav-item" role="presentation">
+								<button class="nav-link" id="shop-tab" data-bs-toggle="tab" data-bs-target="#shop"
+								        type="button" role="tab" aria-controls="shop" aria-selected="false">편집샵
+								</button>
+							</li>
+						</ul>
+						<div class="tab-content" id="myTabContent">
+							<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+								...
+							</div>
+							<div class="tab-pane fade" id="product" role="tabpanel" aria-labelledby="product-tab">...
+							</div>
+							<div class="tab-pane fade" id="shop" role="tabpanel" aria-labelledby="shop-tab">...
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 </html>
