--- a/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/src/main/resources/templates/admin/fragments/sidebar.html
@@ -174,6 +174,7 @@
 						<a class="nav-link" th:href="@{/pages/part-new}">메인 배너 관리</a>
 						<a class="nav-link" th:href="@{/admin/popup/list}">팝업 관리</a>
 						<a class="nav-link" th:href="@{/admin/popup/create}">팝업 생성</a>
+						<a class="nav-link" th:href="@{/admin/notice/list}">공지사항 관리</a>
 					</nav>
 				</div>
 
