--- a/src/main/resources/templates/user/content/pages/my-page/notice.html
+++ b/src/main/resources/templates/user/content/pages/my-page/notice.html
@@ -2,17 +2,34 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/user/layout/mypage_layout}" lang="ko">
 
-    <div layout:fragment="content" class="content">
+<div layout:fragment="content" class="content">
+	<style>
+        .badge {
+            color: darkgray !important;
+        }
+	</style>
 
-        <div class="card">
-            <div class="card-header">
-                공지사항
-            </div>
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-    </div>
+	<div class="card">
+		<div class="card-header">
+			공지사항
+		</div>
+		<div class="card-body">
+			<ul class="list-group">
+				<!--/*@thymesVar id="notice" type="com.sch.shift3.user.dto.NoticeDto"*/-->
+				<li class="list-group-item d-flex justify-content-between align-items-center"
+				    th:each="notice : ${noticeList}">
+					<a class="text-decoration-none" th:text="${notice.title}" th:href="'/notice/' + ${notice.id}"></a>
+					<span class="badge badge-primary badge-pill"
+					      th:text="${#temporals.format(notice.createdAt, 'yyyy-MM-dd')}"></span>
+				</li>
+			</ul>
+
+			<th:block th:if="${noticeList.size() == 0}">
+				<div class="text-center mt-5">
+					공지사항이 없습니다.
+				</div>
+			</th:block>
+		</div>
+	</div>
+</div>
 </html>
